--- a/springproject/src/main/resources/application.properties
+++ b/springproject/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-server.port=9090
+spring.application.name=person
+
+server.port=${app.port:9090}
+
+#spring.cloud.config.uri=http://127.0.0.1:8888
+
+spring.config.import=configserver:http://127.0.0.1:8888
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
