--- a/ms-order/src/main/resources/application.properties
+++ b/ms-order/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=${app.port:10000}
 #spring.cloud.config.uri=http://127.0.0.1:8888
 
 spring.config.import=configserver:http://127.0.0.1:8888
+
+micro.domain=order
+micro.subdomain=management
+micro.context=order
+micro.name=order
